--- a/app/views/OurTeach.html
+++ b/app/views/OurTeach.html
@@ -130,8 +130,8 @@
       </div>
       <div class="people__content">
         <div class="container-lg px-5 px-sm-4 px-lg-0">
-          <div class="row">
-            <div class="col-12 col-sm-6 col-lg-3 p-4">
+          <div class="row" id="ourTeach">
+            <!-- <div class="col-12 col-sm-6 col-lg-3 p-4">
               <div class="people__card">
                 <div class="card-img">
                   <img src="../../assets/img/teacher_1.jpg" alt="" />
@@ -144,98 +144,7 @@
                   </p>
                 </div>
               </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-4">
-              <div class="people__card">
-                <div class="card-img">
-                  <img src="../../assets/img/teacher_2.jpg" alt="" />
-                </div>
-                <div class="card-text">
-                  <span>FRENCH</span>
-                  <h2>July Roberts</h2>
-                  <p>Nanotechnology immersion along the information.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-4">
-              <div class="people__card">
-                <div class="card-img">
-                  <img src="../../assets/img/teacher_3.jpg" alt="" />
-                </div>
-                <div class="card-text">
-                  <span>JAPANESE</span>
-                  <h2>July Roberts</h2>
-                  <p>
-                    Bring to the table win-win survival strategies to ensure.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-4">
-              <div class="people__card">
-                <div class="card-img">
-                  <img src="../../assets/img/teacher_4.jpg" alt="" />
-                </div>
-                <div class="card-text">
-                  <span>CHINESE</span>
-                  <h2>July Roberts</h2>
-                  <p>
-                    Proactive domination. At the end of the day, going
-                    forward.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-4">
-              <div class="people__card">
-                <div class="card-img">
-                  <img src="../../assets/img/teacher_5.jpg" alt="" />
-                </div>
-                <div class="card-text">
-                  <span>RUSSIAN</span>
-                  <h2>July Roberts</h2>
-                  <p>A new normal that has evolved from generation X.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-4">
-              <div class="people__card">
-                <div class="card-img">
-                  <img src="../../assets/img/teacher_6.jpg" alt="" />
-                </div>
-                <div class="card-text">
-                  <span>SWEDEN</span>
-                  <h2>July Roberts</h2>
-                  <p>Heading towards a streamlined cloud solution.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-4">
-              <div class="people__card">
-                <div class="card-img">
-                  <img src="../../assets/img/teacher_7.jpg" alt="" />
-                </div>
-                <div class="card-text">
-                  <span>SPANISH</span>
-                  <h2>July Roberts</h2>
-                  <p>Content in real-time will have multiple touchpoints.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-4">
-              <div class="people__card">
-                <div class="card-img">
-                  <img src="../../assets/img/teacher_8.jpg" alt="" />
-                </div>
-                <div class="card-text">
-                  <span>ITALIAN</span>
-                  <h2>July Roberts</h2>
-                  <p>
-                    Capitalize on low hanging fruit to identify a ballpark.
-                  </p>
-                </div>
-              </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -415,5 +324,14 @@
       myFunction(x)
       x.addListener(myFunction)
     </script>
+    <!-- Axios -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"
+      integrity="sha512-u9akINsQsAkG9xjc1cnGF4zw5TFDwkxuc9vUp5dltDWYCSmyd0meygbvgXrlc/z7/o4a19Fb5V0OUE58J7dcyw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="../services/getListUserApi.js"></script>
+    <script src="../controllers/OurTeach.js"></script>
   </body>
 </html>
