--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -558,7 +558,8 @@ html, body {
   position: relative;
   background-image: url(../img/footer_background.jpg);
   background-size: cover;
-  background-position: bottom;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .contact .container {
