--- a/app/views/index.html
+++ b/app/views/index.html
@@ -163,90 +163,100 @@
       <!--KetThuc Tabmenu-->
 
       <!-- The Modal -->
-      <div class="modal fade" id="myModal">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <!-- Modal Header -->
-            <div class="modal-header">
-              <h4 class="modal-title">Modal Heading</h4>
-              <button type="button" class="close" data-dismiss="modal">
-                &times;
-              </button>
+      <form id="formQLTT">
+        <div class="modal fade" id="myModal">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <!-- Modal Header -->
+              <div class="modal-header">
+                <h4 class="modal-title">Modal Heading</h4>
+                <button type="button" class="close" data-dismiss="modal">
+                  &times;
+                </button>
+              </div>
+              <!-- Modal body -->
+              <div class="modal-body">
+                <div class="form-group">
+                  <label>Tài khoản</label>
+                  <input
+                    id="TaiKhoan"
+                    class="form-control"
+                    placeholder="Nhập vào tài khoản"
+                  />
+                  <span class="text-danger sp-thongbao" id="tbTK"></span>
+                </div>
+                <div class="form-group">
+                  <label>Họ tên</label>
+                  <input
+                    id="HoTen"
+                    class="form-control"
+                    placeholder="Nhập vào họ tên"
+                  />
+                  <span class="text-danger sp-thongbao" id="tbTen"></span>
+                </div>
+                <div class="form-group">
+                  <label>Mật khẩu</label>
+                  <input
+                    id="MatKhau"
+                    class="form-control"
+                    placeholder="Nhập vào mật khẩu"
+                    type="password"
+                  />
+                  <span class="text-danger sp-thongbao" id="tbMK"></span>
+                </div>
+                <div class="form-group">
+                  <label>Email</label>
+                  <input
+                    id="Email"
+                    class="form-control"
+                    placeholder="Nhập vào Email"
+                  />
+                  <span class="text-danger sp-thongbao" id="tbEmail"></span>
+                </div>  
+                <div class="form-group">
+                  <label>Hình Ảnh</label>
+                  <input
+                    id="HinhAnh"
+                    class="form-control"
+                    placeholder="Nhập vào hình ảnh"
+                  />
+                  <span class="text-danger sp-thongbao" id="tbHinh"></span>
+                </div>             
+                <div class="form-group">
+                  <label for="">Loại Người Dùng: </label>
+                  <select class="form-control" id="loaiNguoiDung">
+                    <option>Chọn loại người dùng</option>
+                    <option value="GV">Giáo viên</option>
+                    <option value="HV">Học viên</option>
+                  </select>
+                  <span class="text-danger sp-thongbao" id="tbLoaiND"></span>
+                </div>
+                <div class="form-group">
+                  <label for="">Loại Ngôn Ngữ: </label>
+                  <select class="form-control" id="loaiNgonNgu">
+                    <option>Chọn ngôn ngữ</option>
+                    <option>ITALIAN</option>
+                    <option>FRENCH</option>
+                    <option>JAPANESE</option>
+                    <option>CHINESE</option>
+                    <option>RUSSIAN</option>
+                    <option>SWEDEN</option>
+                    <option>SPANISH</option>
+                  </select>
+                  <span class="text-danger sp-thongbao" id="tbloaiNN"></span>
+                </div>
+                <div class="form-group">
+                  <label>Mô tả</label>
+                  <textarea name="" id="MoTa" class="form-control" placeholder="Nhập vào mô tả"></textarea>
+                  <span class="text-danger sp-thongbao" id="tbMT"></span>
+                </div>
+              </div>
+              <!-- Modal footer -->
+              <div class="modal-footer"></div>
             </div>
-            <!-- Modal body -->
-            <div class="modal-body">
-              <div class="form-group">
-                <label>Tài khoản</label>
-                <input
-                  id="TaiKhoan"
-                  class="form-control"
-                  placeholder="Nhập vào tài khoản"
-                />
-              </div>
-              <div class="form-group">
-                <label>Họ tên</label>
-                <input
-                  id="HoTen"
-                  class="form-control"
-                  placeholder="Nhập vào họ tên"
-                />
-              </div>
-              <div class="form-group">
-                <label>Mật khẩu</label>
-                <input
-                  id="MatKhau"
-                  class="form-control"
-                  placeholder="Nhập vào mật khẩu"
-                  type="password"
-                />
-              </div>
-              <div class="form-group">
-                <label>Email</label>
-                <input
-                  id="Email"
-                  class="form-control"
-                  placeholder="Nhập vào Email"
-                />
-              </div>  
-              <div class="form-group">
-                <label>Hình Ảnh</label>
-                <input
-                  id="HinhAnh"
-                  class="form-control"
-                  placeholder="Nhập vào hình ảnh"
-                />
-              </div>             
-              <div class="form-group">
-                <label for="">Loại Người Dùng: </label>
-                <select class="form-control" id="loaiNguoiDung">
-                  <option>Chọn loại người dùng</option>
-                  <option value="GV">Giáo viên</option>
-                  <option value="HV">Học viên</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="">Loại Ngôn Ngữ: </label>
-                <select class="form-control" id="loaiNgonNgu">
-                  <option>Chọn ngôn ngữ</option>
-                  <option>ITALIAN</option>
-                  <option>FRENCH</option>
-                  <option>JAPANESE</option>
-                  <option>CHINESE</option>
-                  <option>RUSSIAN</option>
-                  <option>SWEDEN</option>
-                  <option>SPANISH</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label>Mô tả</label>
-                <textarea name="" id="MoTa" class="form-control" placeholder="Nhập vào mô tả"></textarea>
-              </div>
-            </div>
-            <!-- Modal footer -->
-            <div class="modal-footer"></div>
           </div>
         </div>
-      </div>
+      </form>
     </div>
     <div id="container"></div>
     <style>
@@ -283,6 +293,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="../services/getListUserApi.js"></script>
+    <script src="../services/Validation.js"></script>
     <script src="../models/Users.js"></script>
     <script src="../controllers/index.js"></script>
   </body>
