--- a/app/views/index.html
+++ b/app/views/index.html
@@ -117,6 +117,7 @@
                   placeholder="Nhập từ khóa"
                   aria-label="Recipient's username"
                   aria-describedby="basic-addon2"
+                  id="txtSearch"
                 />
                 <div class="input-group-append">
                   <span class="input-group-text" id="basic-addon2"
